--- a/index.html
+++ b/index.html
@@ -18,22 +18,28 @@
         >
         <ul class="list header-list">
           <li>
-            <a class="link header-item current" href="./index.html">Студія</a>
+            <a class="link header-link header-item current" href="./index.html"
+              >Студія</a
+            >
           </li>
           <li>
-            <a class="link header-item" href="./portfolio.html">Портфоліо</a>
+            <a class="link header-link header-item" href="./portfolio.html"
+              >Портфоліо</a
+            >
           </li>
-          <li><a class="link header-item" href="#">Контакти</a></li>
+          <li><a class="link header-link header-item" href="#">Контакти</a></li>
         </ul>
       </nav>
-      <ul class="list header-list">
+      <ul class="list header-contact-list">
         <li>
-          <a class="link header-contact" href="mailto:info@devstudio.com"
+          <a
+            class="link header-link header-contact"
+            href="mailto:info@devstudio.com"
             >info@devstudio.com</a
           >
         </li>
         <li>
-          <a class="link header-contact" href="tel:+380961111111"
+          <a class="link header-link header-contact" href="tel:+380961111111"
             >+38 096 111 11 11</a
           >
         </li>
@@ -44,7 +50,7 @@
         <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
         <button type="button" class="hero-button">Замовити послугу</button>
       </section>
-      <section class="text">
+      <section class="text background">
         <h2 class="text-tittle visually-hidden">Наші особливості</h2>
         <ul class="list text-list">
           <li class="text-item">
@@ -76,7 +82,7 @@
           </li>
         </ul>
       </section>
-      <section class="category">
+      <section class="category background">
         <h2 class="studio-title category-title">Чим ми займаємося</h2>
         <ul class="list category-list">
           <li class="category-item">
