--- a/portfolio.html
+++ b/portfolio.html
@@ -17,38 +17,46 @@
           ><span>Web</span>Studio</a
         >
         <ul class="list header-list">
-          <li><a class="link header-item" href="./index.html">Студія</a></li>
           <li>
-            <a class="link header-item current" href="./portfolio.html"
+            <a class="link header-link header-item" href="./index.html"
+              >Студія</a
+            >
+          </li>
+          <li>
+            <a
+              class="link header-link header-item current"
+              href="./portfolio.html"
               >Портфоліо</a
             >
           </li>
-          <li><a class="link header-item" href="#">Контакти</a></li>
+          <li><a class="link header-link header-item" href="#">Контакти</a></li>
         </ul>
       </nav>
       <ul class="list header-contact-list">
         <li>
-          <a class="link header-contact" href="mailto:info@devstudio.com"
+          <a
+            class="link header-link header-contact"
+            href="mailto:info@devstudio.com"
             >info@devstudio.com</a
           >
         </li>
         <li>
-          <a class="link header-contact" href="tel:+380961111111"
+          <a class="link header-link header-contact" href="tel:+380961111111"
             >+38 096 111 11 11</a
           >
         </li>
       </ul>
     </header>
     <main>
-      <section>
-        <h1 class="title-portfolio visually-hidden">Портфоліо</h1>
-        <button class="btn" type="button">Усі</button>
-        <button class="btn" type="button">Веб-сайти</button>
-        <button class="btn" type="button">Додатки</button>
-        <button class="btn" type="button">Дизайн</button>
-        <button class="btn" type="button">Маркетинг</button>
-      </section>
-      <section>
+      <section class="background">
+        <h1 class="visually-hidden">Портфоліо</h1>
+        <ul class="list btn-list">
+          <li><button class="btn" type="button">Усі</button></li>
+          <li><button class="btn" type="button">Веб-сайти</button></li>
+          <li><button class="btn" type="button">Додатки</button></li>
+          <li><button class="btn" type="button">Дизайн</button></li>
+          <li><button class="btn" type="button">Маркетинг</button></li>
+        </ul>
         <ul class="list portfolio-list">
           <li class="portfolio-item">
             <a href="#" class="link portfolio-link">
