--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
         <button type="button" class="hero-button">Замовити послугу</button>
       </section>
-      <section class="text background">
+      <section class="text">
         <h2 class="text-tittle visually-hidden">Наші особливості</h2>
         <ul class="list text-list">
           <li class="text-item">
@@ -82,7 +82,7 @@
           </li>
         </ul>
       </section>
-      <section class="category background">
+      <section class="category">
         <h2 class="studio-title category-title">Чим ми займаємося</h2>
         <ul class="list category-list">
           <li class="category-item">
