--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,7 @@
       </ul>
     </header>
     <main>
-      <section class="background">
+      <section>
         <h1 class="visually-hidden">Портфоліо</h1>
         <ul class="list btn-list">
           <li><button class="btn" type="button">Усі</button></li>
